feat(http-gameserver): add HTTP/3 game server & client module (014)
Introduces the `http-gameserver` Gradle module demonstrating JEP 408
(Simple Web Server) and JEP 517 (HTTP/3 Client API, JDK 26).

Server (JEP 408 — com.sun.net.httpserver):
- REST endpoints: POST /games, POST /games/{id}/join,
  POST /games/{id}/move, GET /games/{id}/state
- Server-Sent Events: GET /games/{id}/events with real-time state push
- Virtual thread executor (JEP 444) for I/O-bound concurrency
- Session lifecycle management with ConcurrentHashMap
- Session capacity limits (503), timeout/cleanup, structured logging

Client (JEP 517 — HttpClient.Version.HTTP_3):
- HTTP/3 opt-in with automatic fallback to HTTP/1.1
- Negotiated protocol version logged via HttpResponse.version()
- SSE stream consumption via BodyHandlers.ofLines()
- SSE reconnect + state resync on unexpected disconnect
- Configurable timeout with retry-on-failure for move submissions

Testing (45 tests, all passing):
- HttpGameServerTest: full game integration, concurrency (10 sessions)
- HttpGameClientTest: HTTP/3 preference + fallback verification
- QuickstartValidationTest: all quickstart.md scenarios validated
  including Gradle run startup, SSE event ordering (start/state/end)
- HttpProtocolTest, GameSessionManagerTest, SseHandlerTest,
  HttpTransportServerTest: unit coverage

Benchmarks: HttpGameServerBenchmark (JMH) — full game throughput
and single-move latency targets.

CI: .github/workflows/http-gameserver.yml targeting this branch
and jdk26, using Azul Zulu JDK 26 early access.

Constitution: amends to v1.2.0 (Principle XI — JEP documentation
in README). README updated with JEP 408 programmatic API entry
and new JEP 517 entry under JDK 26.

Merges into jdk26 per Principle IX (pre-GA JDK feature branch).

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>